# Hackathon-II

./: CLAUDE.md
.github/workflows/: sync_to_hf.yml
.specify/memory/: constitution.md
console_todo_app/: .gitignore  README.md  main.py  pyproject.toml
phase-2/backend/: debug_token.py  generate_test_token.py  main.py  pyproject.toml
phase-2/backend/src/controllers/: task_controller.py
phase-2/backend/src/lib/: auth.py  env_config.py
phase-2/backend/src/models/: base.py  task.py  user.py
phase-2/backend/src/routers/: task_router.py
phase-2/backend/tests/: test_tasks.py
phase-2/frontend/: next.config.ts  package-lock.json  package.json
phase-3/backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
phase-3/frontend/: env.example  package-lock.json  package.json
phase-3/mcp-server/: .env  client.py  main.py  pyproject.toml
phase-3/mcp-server/src/lib/: auth_middleware.py  db_connect.py  env_config.py  lifespan.py
phase-3/mcp-server/src/models/: conversation.py  message.py  user.py
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-2-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase-3-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase-3-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase-3-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-phase3-frontend/: data-model.md  plan.md  quickstart.md  (+3 more)
(+101 files in other folders)
