[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.4",
    "fastmcp>=3.0.0b2",
    "mcp[cli]>=1.26.0",
    "psycopg2>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pyjwt[crypto]>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.32",
]
